--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>whatyearisit</title>
   </head>
   <body>
-    <p id="year"> What Year Is It </p>
+    <p id="year"> FAKE_YEAR_FOR_TEST </p>
     <script src="script.js"></script>
   </body>
 </html>
